<resources>
    <string name="app_name">Tin Tuyển Dụng</string>

    <string name="icon_eye">&#xe921;</string>
    <string name="icon_flash">&#xe901;</string>
    <string name="icon_ex">&#xe90c;</string>
    <string name="icon_edit">&#xe90b;</string>
    <string name="icon_luunhap">&#xe91b;</string>
    <string name="icon_dangtin">&#xe901;</string>
    <string name="icon_thongbao">&#xe927;</string>
    <string name="icon_navigate">&#xe907;</string>
    <string name="icon_back">&#xe908;</string>
    <string name="icon_next">&#xe949;</string>
    <string name="icon_close">&#xe939;</string>
    <string name="icon_user">&#xe902;</string>
    <string name="icon_tkdn">&#xe906;</string>
    <string name="icon_doitk">&#xe902;</string>
    <string name="icon_package">&#xe903;</string>
    <string name="icon_about">&#xe900;</string>
    <string name="icon_terms">&#xe905;</string>
    <string name="icon_share">&#xe904;</string>
    <string name="icon_search">&#xe91c;</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">duytrandinh95</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>

</resources>
